测试图文页面

--- a/weapp/webapp/modules/cms/templates/webapp/default_v3/article_detail.html
+++ b/weapp/webapp/modules/cms/templates/webapp/default_v3/article_detail.html
@@ -14,7 +14,7 @@
     	<h2>该文章已被删除</h2>
     	{% else %}
         <div class="xui-sub-title">
-            <h2>{{article.title}}</h2>
+            <h2>{{article.title}}"testing~~~"</h2>
 <!--             <p class="ml20 mb20">{{article.created_at|date:"Y年m月j日 H:i"}}</p> -->
         </div>
 
