--- a/weapp/market_tools/tools/coupon/templates/coupon/webapp/coupon.html
+++ b/weapp/market_tools/tools/coupon/templates/coupon/webapp/coupon.html
@@ -53,7 +53,7 @@ html,body{
 						<a href="{{h5_host}}/mall/products/?woid={{request.webapp_owner_id}}&category_id=0&fmt={{ cur_request_member.token }}" class="xui-btn xui-goShopping-btn">随便逛逛</a>
 						<!-- 1.优惠券领取成功 显示 -->
 						{% if rule.limit_product %}
-						<a href="{{h5_host}}/mall/coupon_products/?woid={{request.webapp_owner_id}}&coupon_id={{rule.id}}&coupon_name={{rule.name}}&fmt={{ cur_request_member.token }}" class="xui-btn xui-toUse-btn hidden">立即使用</a>
+						<a href="{{h5_host}}/mall/coupon_products/?woid={{request.webapp_owner_id}}&coupon_rule_id={{rule.id}}&coupon_name={{rule.name}}&fmt={{ cur_request_member.token }}" class="xui-btn xui-toUse-btn hidden">立即使用</a>
 						{% else %}
 						<a href="{{h5_host}}/mall/products/?woid={{request.webapp_owner_id}}&category_id=0&fmt={{ cur_request_member.token }}" class="xui-btn xui-toUse-btn hidden">立即使用</a>
 						{% endif %}
