--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
@@ -169,8 +169,7 @@
 		<div class="form-group">
 			<label class="control-label" for="details">详情</label>
 			<!-- <span class="xui-fontGary" style="font-weight: lighter;">（上传图片要求宽度在480-620之间,高度小于等于960,大小不超过500K）</span> -->
-			<textarea class="wui-details wa-validate" id="details" name="details">
-			</textarea>
+			<textarea class="wui-details wa-validate" id="details" name="details"></textarea>
 		</div>
 		<div class="form-group wui-upload-img-div">
 			<label class="control-label fl" for="swipe_images_des">上传图片</label>
