--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
@@ -19,12 +19,15 @@
 			width: 150px;
 		}  
 		.wui-create{
-			height: 34px;
-			width: 90%;
-		    margin: 20px 0 34px 43px;
-	        font-size: 16px;
+			height: 28px;
+			width: 100%;
+   			background-color: #d8eafb;
+		}
+		.wui-create span{
    			font-weight: bold;
-   			border-bottom: 1px solid #000;
+		    display: inline-block;
+		    margin-left: 57px;
+		    vertical-align: -webkit-baseline-middle;
 		}
 		.wui-upload-img{
 			width: 100px;
@@ -85,13 +88,13 @@
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
 			<li><a href="/apps/">百宝箱</a></li>
-			<li class="active">微信投票</li>
+			<li class="active">高级投票</li>
 		</ul>
 	</div>
 	<!--查看选手-->
 	{% if cur_player_info %}
 	<div class="panel panel-default wui-create-player">
-		<div class="wui-create">选手详情</div>
+		<div class="wui-create"><span>查看选手</span></div>
 		<img class="wui-upload-img wa-upload-img" src="{{cur_player_info.icon}}" style="display:block">
 		<div class="form-group wui-upload-img-div">
 			<label class="control-label fl" for="swipe_images">上传头像</label>
@@ -142,7 +145,7 @@
 	<!--创建选手-->
 	{% else %}
 	<div class="panel panel-default wui-create-player">
-		<div class="wui-create">创建选手</div>
+		<div class="wui-create"><span>创建选手</span></div>
 		<img class="wui-upload-img wa-upload-img" src="">
 		<div class="form-group wui-upload-img-div">
 			<label class="control-label fl" for="swipe_images">上传头像</label>
@@ -152,7 +155,7 @@
 		</div>
 		<div class="form-group">
 			<label class="control-label fl" for="player_name">名称</label>
-			<input type="text" class="form-control wa-validate" name="player_name" id="player_name"/>
+			<input type="text" class="form-control wa-validate" name="player_name" id="player_name" placeholder="输入标题名称"/>
 		</div>
 		<div class="form-group">
 			<label class="control-label fl" for="group">选择分组</label>
@@ -164,7 +167,7 @@
 		</div>
 		<div class="form-group">
 			<label class="control-label fl" for="serial_number">输入编号</label>
-			<input type="text" class="form-control wa-validate" name="serial_number" id="serial_number"/>
+			<input type="text" class="form-control wa-validate" name="serial_number" id="serial_number" placeholder="输入指定编号"/>
 		</div>
 		<div class="form-group">
 			<label class="control-label" for="details">详情</label>
