--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_player_details.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_player_details.html
@@ -80,7 +80,7 @@
 	}
 	.wui-detail-middle{
 		width: 40%;
-	    margin: 5% 0 1% 3%;
+	    margin: 5% 0 1% 2%;
 	}
 	.wui-detail-middle .wui-detail-vote-count{
 		float: right;
@@ -191,7 +191,7 @@
 			<button class="wa-detail-share">拉票</button>
 		</div>
 		<div class="wui-detail-middle">
-			<span class="wa-detail-serial-number">{{player_details.serial_number}}</span>
+			<span class="wa-detail-serial-number">编号：{{player_details.serial_number}}</span>
 			<span class="wui-detail-vote-count wa-detail-vote-count"><span>{{player_details.count}}</span>&nbsp;票</span>
 		</div>
 	</div>
@@ -273,7 +273,7 @@
 	$('body').delegate('.wa-detail-share', 'click', function(event) {
 		shareMask('show');
 	});
-	$('body').delegate('.wa-share-close', 'click', function(event) {
+	$('.wui-share-mask').delegate('.wa-share-close', 'click', function(event) {
 		shareMask('hide');
 	});
 	function shareMask(action){
