--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -537,7 +537,7 @@
     /*
     查看选手详情
      */
-	$('body').delegate('.wa-rank-pic', 'click', function(event) {
+	$('.wa-rank-list').delegate('.wa-rank-pic', 'click', function(event) {
 		var player_id = $(event.target).parents('.wa-rank-item').data('id');
 		var link = '/m/apps/shvote/m_player_details/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&player_id='+player_id;
 		window.location.href = link;
