--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_player_details.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_player_details.html
@@ -79,7 +79,7 @@
         font-size: 1rem;
 	}
 	.wui-detail-middle{
-		width: 40%;
+		width: 9.5rem;
 	    margin: 5% 0 1% 2%;
 	}
 	.wui-detail-middle .wui-detail-vote-count{
@@ -187,8 +187,8 @@
 			<span class="wui-detail-user-name">{{player_details.name}}</span>
 		</div>
 		<div class="wui-detail-btn wa-detail-btn">
-			<button class="wa-ivote" data-id="{{player_details.id}}" data-count="{{can_vote_count}}">投票</button>
 			<button class="wa-detail-share">拉票</button>
+			<button class="wa-ivote" data-id="{{player_details.id}}" data-count="{{can_vote_count}}">投票</button>
 		</div>
 		<div class="wui-detail-middle">
 			<span class="wa-detail-serial-number">编号：{{player_details.serial_number}}</span>
