fix关注公众号弹层看不见

--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
@@ -34,7 +34,8 @@
 			height: 100px;
 			display: none;
 			float: right;
-			margin-right: 65%;
+		    margin-right: 68%;
+    		margin-top: 13px;
 		}
 		.wui-upload-img-div{
 			height: 100px;
