--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
@@ -131,7 +131,7 @@
                 <div class="wui-i-shvoteParticipance-content-lable">名称</div>
                 <input class="wui-i-input wa-name" data-validate="require-notempty::请填写名称" placeholder="输入标题/名称"/>
             </div>
-            <div class="wui-i-shvoteParticipance-content-line">
+            <div class="wui-i-shvoteParticipance-content-line wui-i-shvoteParticipance-content-choose-group">
                 <div class="wui-i-shvoteParticipance-content-lable">分组选择</div>
                 <div class="wui-DropDownBox">
                     <div class="wui-i-inputContainer xa-inputControl">
@@ -212,7 +212,7 @@ $(document).ready(function() {
 	}
     $('.xa-select-type').html(html_str);
     if (html_str == ""){
-        $('.type_name').html("您还没有可选择的分组");
+        $('.wui-i-shvoteParticipance-content-choose-group').hide();
     }else{
         $('.type_name').html("请选择分组信息");
         $('.group_type').click(function(){
